# Magnify-ATAR

./: .gitignore  CMakeLists.txt  Linkdef.h  README.md  clean.sh  magnify.sh  main.cc
event/: Data.cc  Data.h
scripts/: Magnify.C  loadClasses.C
viewer/: ControlWindow.cc  ControlWindow.h  GuiController.cc  GuiController.h  MainWindow.cc  MainWindow.h  ViewWindow.cc  ViewWindow.h
